[gd_scene load_steps=4 format=3 uid="uid://ytwvoc765rk3"]

[ext_resource type="Script" uid="uid://brx8kajls5irq" path="res://Scripts/ShoppingStoreButtons.gd" id="1_6pps0"]
[ext_resource type="Texture2D" uid="uid://5mgc7ux7nk1g" path="res://Art/icon.svg" id="2_pk8ln"]
[ext_resource type="PackedScene" uid="uid://dvhspowe5pn6t" path="res://Scenes/shopping_list.tscn" id="3_d07kg"]

[node name="ShoppingScene" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6pps0")

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Back" type="Button" parent="Control/CanvasLayer"]
offset_left = 18.0
offset_top = 323.0
offset_right = 63.0
offset_bottom = 354.0
text = "Back
"

[node name="Next" type="Button" parent="Control/CanvasLayer"]
offset_left = 1036.0
offset_top = 340.0
offset_right = 1081.0
offset_bottom = 371.0
text = "Next
"

[node name="Finished" type="Button" parent="Control/CanvasLayer"]
offset_left = 942.0
offset_top = 566.0
offset_right = 1092.0
offset_bottom = 597.0
text = "Finished Shopping
"

[node name="ShoppingList" type="Button" parent="Control/CanvasLayer"]
offset_left = 966.0
offset_top = 55.0
offset_right = 1078.0
offset_bottom = 86.0
text = "Shopping List
"

[node name="Money" type="Label" parent="Control/CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="pepperoni" type="Button" parent="Control"]
layout_mode = 0
offset_left = -235.0
offset_top = -44.0
offset_right = -147.0
offset_bottom = 9.0
text = "pepperoni"

[node name="cheese" type="Button" parent="Control"]
layout_mode = 0
offset_left = -232.0
offset_top = -175.0
offset_right = -144.0
offset_bottom = -122.0
text = "cheese"

[node name="mushrooms" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1051.0
offset_top = -212.0
offset_right = 1152.0
offset_bottom = -159.0
text = "mushrooms"

[node name="pineapple" type="Button" parent="Control"]
layout_mode = 0
offset_left = -236.0
offset_top = 26.0
offset_right = -135.0
offset_bottom = 79.0
text = "pineapple"

[node name="sauce" type="Button" parent="Control"]
layout_mode = 0
offset_left = -238.0
offset_top = -110.0
offset_right = -137.0
offset_bottom = -57.0
text = "sauce"

[node name="olives" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1020.0
offset_top = -12.0
offset_right = 1121.0
offset_bottom = 41.0
text = "olives"

[node name="peppers" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1152.0
offset_top = -17.0
offset_right = 1253.0
offset_bottom = 36.0
text = "peppers"

[node name="bacon" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1034.0
offset_top = -129.0
offset_right = 1132.0
offset_bottom = -91.0
text = "bacon
"

[node name="ham" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1039.0
offset_top = -73.0
offset_right = 1137.0
offset_bottom = -35.0
text = "ham"

[node name="anchovies" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1994.0
offset_top = -152.0
offset_right = 2092.0
offset_bottom = -114.0
text = "anchovies"

[node name="garlic" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1813.0
offset_top = -65.0
offset_right = 1911.0
offset_bottom = -27.0
text = "garlic"

[node name="tomato" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1996.0
offset_top = -62.0
offset_right = 2094.0
offset_bottom = -24.0
text = "tomato"

[node name="onion" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1817.0
offset_top = -154.0
offset_right = 1915.0
offset_bottom = -116.0
text = "onion"

[node name="sausage" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1910.0
offset_top = -238.0
offset_right = 2008.0
offset_bottom = -200.0
text = "sausage"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Icon3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1245, -105)
texture = ExtResource("2_pk8ln")

[node name="ShoppingListScene" parent="." instance=ExtResource("3_d07kg")]

[connection signal="pressed" from="Control/CanvasLayer/Back" to="Control" method="_on_back_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Next" to="Control" method="_on_next_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Finished" to="Control" method="_on_finished_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/ShoppingList" to="Control" method="_on_shopping_list_pressed"]
[connection signal="pressed" from="Control/pepperoni" to="Control" method="_on_food_pressed" binds= [0, 25.0]]
[connection signal="pressed" from="Control/cheese" to="Control" method="_on_food_pressed" binds= [1, 15.0]]
[connection signal="pressed" from="Control/mushrooms" to="Control" method="_on_food_pressed" binds= [2, 15.0]]
[connection signal="pressed" from="Control/pineapple" to="Control" method="_on_food_pressed" binds= [3, 15.0]]
[connection signal="pressed" from="Control/sauce" to="Control" method="_on_food_pressed" binds= [4, 15.0]]
[connection signal="pressed" from="Control/olives" to="Control" method="_on_food_pressed" binds= [5, 15.0]]
[connection signal="pressed" from="Control/peppers" to="Control" method="_on_food_pressed" binds= [6, 15.0]]
[connection signal="pressed" from="Control/bacon" to="Control" method="_on_food_pressed" binds= [7, 15.0]]
[connection signal="pressed" from="Control/ham" to="Control" method="_on_food_pressed" binds= [8, 10.0]]
[connection signal="pressed" from="Control/anchovies" to="Control" method="_on_food_pressed" binds= [9, 5.0]]
[connection signal="pressed" from="Control/garlic" to="Control" method="_on_food_pressed" binds= [10, 7.0]]
[connection signal="pressed" from="Control/tomato" to="Control" method="_on_food_pressed" binds= [11, 13.0]]
[connection signal="pressed" from="Control/onion" to="Control" method="_on_food_pressed" binds= [11, 10.0]]
[connection signal="pressed" from="Control/sausage" to="Control" method="_on_food_pressed" binds= [12, 12.0]]
